# edyrix-backend

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  create_admin.py  create_dev_user.py  docker-compose.local.yml  docker-compose.yml  dump_routes.py  pyproject.toml  railway.toml  routes_after.txt  routes_before.txt  routes_phase_f.txt  seed.py  start.sh
.github/workflows/: ci.yml
alembic/versions/: 3c170de11994_initial_schema.py  b7c9f2a3e854_add_token_blacklist.py  c3d8e1f2a901_add_password_hash_to_users.py  d4f1a2b3c4d5_add_admin_users.py  e5a6b7c8d9f0_add_watch_history_current_time.py  f6a7b8c9d0e1_add_subject_and_lesson_to_tests.py  g7h8i9j0k1l2_retention_features.py  h8i9j0k1l2m3_admin_missing_features.py
app/: config.py  content_seed.py  database.py  dependencies.py  dev_seed.py  exceptions.py  limiter.py  logger.py  main.py  queue.py  redis_client.py  worker.py
app/models/: __init__.py  admin.py  audit.py  auth.py  content.py  doubt.py  doubt_template.py  notification.py  progress.py  subscription.py  user.py
app/routers/: __init__.py  admin.py  auth.py  content.py  doubts.py  goals.py  payments.py  plans.py  progress.py  share.py  subscriptions.py  tests.py  users.py  webhooks.py
app/schemas/: admin.py  common.py  content.py  doubt.py  progress.py  subscription.py  user.py
app/services/: analytics_service.py  auth_service.py  content_service.py  email_service.py  payment_service.py  (+5 more)
seed_data/: chemistry.json  physics.json
tests/: conftest.py  test_access_control.py  test_auth.py  test_content.py  test_payments.py  test_subscriptions.py
(+24 files in other folders)
